@@ -105,7 +105,7 @@ public:
 	const csVector3 GetPosition();
 	int AddWall(const char *name, const char *texture, float thickness, float x1, float z1, float x2, float z2, float height1, float height2, float voffset1, float voffset2, float tw, float th);
 	int AddFloor(const char *name, const char *texture, float thickness, float x1, float z1, float x2, float z2, float voffset1, float voffset2, float tw, float th);
-	void AddFloorIndicator(const char *direction, float CenterX, float CenterZ, float width, float height, float voffset);
+	void AddFloorIndicator(const char *texture_prefix, const char *direction, float CenterX, float CenterZ, float width, float height, float voffset);
 	int AddPlaque(const char *texture, float x1, float z1, float x2, float z2, float height, float voffset, float tw, float th);
 	void CreateButtonPanel(const char *texture, int rows, int columns, const char *direction, float CenterX, float CenterZ, float width, float height, float voffset, float spacingX, float spacingY, float tw, float th);
 	void DumpQueues();
@@ -175,7 +175,7 @@ public:
 	void EnableDoors(bool value);
 	DirectionalIndicator* GetIndicator(int floor);
 	void SetShaftDoors(int number, float thickness, float CenterX, float CenterZ);
-	void AddFloorSigns(bool relative, const char *direction, float CenterX, float CenterZ, float width, float height, float voffset);
+	void AddFloorSigns(bool relative, const char *texture_prefix, const char *direction, float CenterX, float CenterZ, float width, float height, float voffset);
 	void SetCallButtons(int floor, bool direction, bool value);
 	bool IsIdle();
 	void QueueReset();
