@@ -83,7 +83,7 @@ public:
 	void EnableColumnFrame(bool value);
 	int ColumnWallBox(const char *name, const char *texture, float x1, float x2, float z1, float z2, float height_in, float voffset, float tw, float th, bool inside, bool outside, bool top, bool bottom);
 	int ColumnWallBox2(const char *name, const char *texture, float CenterX, float CenterZ, float WidthX, float LengthZ, float height_in, float voffset, float tw, float th, bool inside, bool outside, bool top, bool bottom);
-	bool AddFloorIndicator(int elevator, bool relative, const char *direction, float CenterX, float CenterZ, float width, float height, float voffset);
+	bool AddFloorIndicator(int elevator, bool relative, const char *texture_prefix, const char *direction, float CenterX, float CenterZ, float width, float height, float voffset);
 	void UpdateFloorIndicators();
 	void Loop();
 	csArray<int> GetCallButtons(int elevator);
