@@ -30,6 +30,7 @@ in a shaft or an elevator
 -split chimes sounds into up and down versions
 -added support for writing text onto a texture with the AddText command
 -fixed a memory leak involving floor beeps
+-added support for texture name prefixes, used with floor indicators and signs
 
 Version 1.4.1 (2.0 Alpha 4.1)
 -------------------------
